--- a/Car Website/src/App.css
+++ b/Car Website/src/App.css
@@ -35,3 +35,29 @@ h1,h2,h3,h4,h5,h6,p{
   font-family: "Racing Sans One", cursive;
 }
 
+
+.page{
+  position: relative;
+  width: 100%;
+  padding: 0;
+  transition: 0.5s;
+  padding-bottom: 50px;
+}
+
+.page-img{
+  position: relative;
+  width: 100%;
+  height: 25vh;
+  object-fit: cover;
+  object-position: center;
+}
+
+.page::after{
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 25vh;
+  background: rgba(0, 0, 0, 0.4);
+}
